--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+    background-color: #efefef;
+  }
 
 a {
   color: inherit;
@@ -24,3 +25,9 @@ a {
     background: black;
   }
 }
+
+
+h2{
+  font-size: 62px;
+  margin: 20px 0 0 0;
+} 
